--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/rc-slider": "^9.3.1",
     "@types/react-router-dom": "^5.3.3",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.344.0",
+    "rc-slider": "^11.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.8.2",
     "swiper": "^11.2.10"
   },
